--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.9.0",
     "install": "^0.13.0",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "npm": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,6 +26,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
